# Stukk

./: CHANGELOG.md  LICENSE  Readme.md  pyproject.toml  requirements-dev.txt
customtkinter/: __init__.py
customtkinter/windows/: ctk_tk.py  ctk_toplevel.py
customtkinter/windows/widgets/: ctk_optionmenu.py  ctk_segmented_button.py
customtkinter/windows/widgets/core_widget_classes/: dropdown_menu.py
docs/: project-setup.md
test/manual_integration_tests/: test_checkbox.py
